Issue #22. It s good for share score

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@ rel="stylesheet" type="text/css" /> <!-- Load custom Google Font -->
 <script type="text/javascript" src="js/config.js" defer="true"></script>
 <!-- Load the runner -->
 <script type="text/javascript" src="js/main.js" defer="true"></script>
-<!-- Partage Facebook -->
+<!-- Facebook Share -->
 <script type="text/javascript" src="js/share.js" defer="true"></script>
 
 
 </head>
 
 <body style="overflow:hidden">
-<a onclick="javascript:share()" title="Partager sur Facebook" target="_blank" id="facebook">
+<a onclick="javascript:share()" title="Share on Facebook" target="_blank" id="facebook">
 <span>
 <img width="73" height="23" src="images/facebook_share.png" alt="Facebook" /> 
 </span>
